a new section added

--- a/index.html
+++ b/index.html
@@ -2993,12 +2993,35 @@
    <!-- cover card div -->
     <div>
 
-      <div class="card bg-base-100 w-full shadow-xl">
+      <div class="card bg-gray-200  shadow-xl mt-6 lg:ml-32 lg:mr-32 gap-9">
         <div class="card-body">
-          <h2 class="card-title">Card title!</h2>
-          <p>If a dog chews shoes whose shoes does he choose?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">Buy Now</button>
+          <h2 class="">Find the best vacation rentals from around the world!</h2>
+          <div class="flex lg:flex-row flex-col">
+
+            <div>
+              <img class="w-1/12" src="Images/Icons/world-map.png" alt="">
+              <h4>Find inspiration for your next trip</h4>
+              <p>
+                Browse vacation homes, cabins, beach houses, condos, houseboats—and everything in between
+              </p>
+            </div>
+
+            <div>
+              <img class="w-1/12" src="Images/Icons/world-map.png" alt="">
+              <h4>Find inspiration for your next trip</h4>
+              <p>
+                Browse vacation homes, cabins, beach houses, condos, houseboats—and everything in between
+              </p>
+            </div>
+
+            <div>
+              <img class="w-1/12" src="Images/Icons/world-map.png" alt="">
+              <h4>Find inspiration for your next trip</h4>
+              <p>
+                Browse vacation homes, cabins, beach houses, condos, houseboats—and everything in between
+              </p>
+            </div>
+
           </div>
         </div>
       </div>
