--- a/index.html
+++ b/index.html
@@ -1516,6 +1516,7 @@
   </section>
 
 
+  <!-- See more button -->
 
   <button id="showMoreButton" class="w-full mt-16 px-4 py-2 text-purple-600 border border-purple-600 rounded hover:bg-purple-600 hover:text-white transition duration-200">
     Show more
@@ -2961,7 +2962,7 @@
 
    <!-- small card div -->
 
-   <div class="flex justify-center gap-6">
+   <div class="flex lg:flex-row flex-col justify-center gap-6">
     <div class="card bg-gray-200 w-96 shadow-xl">
       <div class="card-body">
         <img class="w-1/6" src="Images/Icons/daimond.png" alt="">
@@ -2990,48 +2991,165 @@
     </div>
    </div>
 
-   <!-- cover card div -->
-    <div>
+   
 
-      <div class="card bg-gray-200  shadow-xl mt-6 lg:ml-32 lg:mr-32 gap-9">
-        <div class="card-body">
-          <h2 class="">Find the best vacation rentals from around the world!</h2>
-          <div class="flex lg:flex-row flex-col">
-
-            <div>
-              <img class="w-1/12" src="Images/Icons/world-map.png" alt="">
-              <h4>Find inspiration for your next trip</h4>
-              <p>
-                Browse vacation homes, cabins, beach houses, condos, houseboats—and everything in between
-              </p>
-            </div>
-
-            <div>
-              <img class="w-1/12" src="Images/Icons/world-map.png" alt="">
-              <h4>Find inspiration for your next trip</h4>
-              <p>
-                Browse vacation homes, cabins, beach houses, condos, houseboats—and everything in between
-              </p>
-            </div>
-
-            <div>
-              <img class="w-1/12" src="Images/Icons/world-map.png" alt="">
-              <h4>Find inspiration for your next trip</h4>
-              <p>
-                Browse vacation homes, cabins, beach houses, condos, houseboats—and everything in between
-              </p>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-    </div>
+     
 
 
 
   
 
+</section>
+
+
+
+<!-- Find vacation rentals with all the comforts of home section -->
+
+<section id="Find-vacation" class="mt-10 lg:mx-40">
+
+ <div class="p-10">
+  <h2 class="text-5xl text-white font-bold">
+    Find vacation rentals with all
+    <br>
+     the comforts of home
+  </h2>
+
+ </div>
+
+ <!-- mini slider -->
+ <div>
+
+  <div class="carousel w-full lg:h-30 lg:mt-44 p-4">
+    <div id="slide1" class="carousel-item relative w-full">
+      <div class="flex">
+
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+
+         <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+      </div>
+      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+        <a href="#slide4" class="btn btn-circle">❮</a>
+        <a href="#slide2" class="btn btn-circle">❯</a>
+      </div>
+    </div>
+    <div id="slide2" class="carousel-item relative w-full">
+      <div class="flex">
+
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+
+         <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+      </div>
+      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+        <a href="#slide1" class="btn btn-circle">❮</a>
+        <a href="#slide3" class="btn btn-circle">❯</a>
+      </div>
+    </div>
+    <div id="slide3" class="carousel-item relative w-full">
+      <div class="flex">
+
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+
+         <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+      </div>
+      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+        <a href="#slide2" class="btn btn-circle">❮</a>
+        <a href="#slide4" class="btn btn-circle">❯</a>
+      </div>
+    </div>
+    <div id="slide4" class="carousel-item relative w-full">
+      <div class="flex">
+
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+
+         <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+        <div>
+          <img
+        src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?q=80&w=2061&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+         class="p-1 bg-white"/>
+        </div>
+      </div>
+      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+        <a href="#slide3" class="btn btn-circle">❮</a>
+        <a href="#slide1" class="btn btn-circle">❯</a>
+      </div>
+    </div>
+  </div>
+  
+
+
+
+ </div>
+
+  
+
+  </div>
 </section>
 
 
