Try to responsive this webpage

--- a/index.html
+++ b/index.html
@@ -41,13 +41,17 @@
 
  <header>
 
+ 
+
+
+
  </header>
 
 
  <main>
 <!-- Card section row-1 -->
 
-<section class="flex justify-center gap-8 mt-5">
+<section class="flex flex-col lg:flex-row justify-center gap-8 mt-5">
   
 
 <div>
@@ -291,7 +295,7 @@
 
 <!-- Card section row-2 -->
 
-<section class="flex justify-center gap-8 mt-5">
+<section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
   <div>
@@ -536,7 +540,7 @@
 
   <!-- Card section row-3 -->
 
-<section class="flex justify-center gap-8 mt-5">
+<section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
   <div>
@@ -781,7 +785,7 @@
 
   <!-- Card section row-4 -->
 
-<section class="flex justify-center gap-8 mt-5">
+<section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
   <div>
@@ -1027,7 +1031,7 @@
 
   <!-- Card section row-5 -->
 
-<section class="flex justify-center gap-8 mt-5">
+<section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
   <div>
@@ -1273,7 +1277,7 @@
 
   <!-- Card section row-6 -->
 
-<section class="flex justify-center gap-8 mt-5">
+<section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
   <div>
@@ -1533,7 +1537,7 @@
     
   </div>
   <div class="card hidden">
-    <section class="flex justify-center gap-8 mt-5">
+    <section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
       <div>
@@ -1769,7 +1773,7 @@
        </div>
       </section>
 
-      <section class="flex justify-center gap-8 mt-5">
+      <section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
         <div>
@@ -2005,7 +2009,7 @@
          </div>
         </section>
 
-        <section class="flex justify-center gap-8 mt-5">
+        <section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
           <div>
@@ -2241,7 +2245,7 @@
            </div>
           </section>
 
-          <section class="flex justify-center gap-8 mt-5">
+          <section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
             <div>
@@ -2477,7 +2481,7 @@
              </div>
             </section>
 
-            <section class="flex justify-center gap-8 mt-5">
+            <section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
               <div>
@@ -2713,7 +2717,7 @@
                </div>
               </section>
 
-              <section class="flex justify-center gap-8 mt-5">
+              <section class="flex flex-col lg:flex-row  justify-center gap-8 mt-5">
   
 
                 <div>
@@ -3918,7 +3922,7 @@ Cabins to explore the great outdoors section -->
 
   <div class="carousel w-full lg:h-30 p-4">
     <div id="slide1" class="carousel-item relative w-full">
-      <div class="flex space-x-4 overflow-x-auto p-4 bg-gray-100">
+      <div class="flex lg:flex-row gap-2 flex-col space-x-4 overflow-x-auto p-4 bg-gray-100">
         <!-- Card 1 -->
         <div class="flex items-center space-x-4 bg-white p-4 rounded-lg shadow-lg max-w-xs">
           <img src="https://images.unsplash.com/photo-1564419379075-584260fc947b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="San Diego" class="w-16 h-16 rounded-lg object-cover">
@@ -3964,7 +3968,7 @@ Cabins to explore the great outdoors section -->
       </div>
     </div>
     <div id="slide2" class="carousel-item relative w-full">
-      <div class="flex space-x-4 overflow-x-auto p-4 bg-gray-100">
+      <div class="flex lg:flex-row gap-2 flex-col space-x-4 overflow-x-auto p-4 bg-gray-100">
         <!-- Card 1 -->
         <div class="flex items-center space-x-4 bg-white p-4 rounded-lg shadow-lg max-w-xs">
           <img src="https://images.unsplash.com/photo-1564419379075-584260fc947b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="San Diego" class="w-16 h-16 rounded-lg object-cover">
@@ -4009,7 +4013,7 @@ Cabins to explore the great outdoors section -->
       </div>
     </div>
     <div id="slide3" class="carousel-item relative w-full">
-      <div class="flex space-x-4 overflow-x-auto p-4 bg-gray-100">
+      <div class="flex lg:flex-row gap-2 flex-col space-x-4 overflow-x-auto p-4 bg-gray-100">
         <!-- Card 1 -->
         <div class="flex items-center space-x-4 bg-white p-4 rounded-lg shadow-lg max-w-xs">
           <img src="https://images.unsplash.com/photo-1564419379075-584260fc947b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="San Diego" class="w-16 h-16 rounded-lg object-cover">
@@ -4054,7 +4058,7 @@ Cabins to explore the great outdoors section -->
       </div>
     </div>
     <div id="slide4" class="carousel-item relative w-full">
-      <div class="flex space-x-4 overflow-x-auto p-4 bg-gray-100">
+      <div class="flex lg:flex-row gap-2 flex-col space-x-4 overflow-x-auto p-4 bg-gray-100">
         <!-- Card 1 -->
         <div class="flex items-center space-x-4 bg-white p-4 rounded-lg shadow-lg max-w-xs">
           <img src="https://images.unsplash.com/photo-1564419379075-584260fc947b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="San Diego" class="w-16 h-16 rounded-lg object-cover">
